// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentInterfaces React 1`] = `
"import { getComponentInterfaces } from '../../reflector/reflector';
import Text from './_react';
const interfaces = [\\"ITextProps\\"];
"
`;

exports[`getComponentInterfaces XCmp 1`] = `
"import { getComponentInterfaces } from '../../reflector/reflector';
import { XCmp } from './_components';
const interfaces = [\\"XAttrs\\", \\"IClickable\\"];
"
`;

exports[`getComponentInterfaces XFnPureCmp 1`] = `
"import { getComponentInterfaces } from '../../reflector/reflector';
import { XFnPureCmp } from './_components';
const interfaces = [\\"XAttrs\\", \\"IClickable\\"];
"
`;

exports[`getComponentInterfaces XLikeFnCmp 1`] = `
"import { getComponentInterfaces } from '../../reflector/reflector';
import { XLikeFnCmp, XLikeFnCmp2 } from './_components';
const interfaces = [\\"IProps\\", \\"IClickable\\"];
const interfaces2 = [\\"IProps\\", \\"IClickable\\"];
"
`;

exports[`getComponentInterfaces XPureCmp 1`] = `
"import { getComponentInterfaces } from '../../reflector/reflector';
import { XPureCmp } from './_components';
const interfaces = [\\"XAttrs\\", \\"IClickable\\"];
"
`;

exports[`getComponentInterfaces XPureCmpWithSpred 1`] = `
"import { getComponentInterfaces } from '../../reflector/reflector';
import { XPureCmpWithSpred } from './_components';
const interfaces = [\\"XAttrs\\", \\"IClickable\\"];
"
`;

exports[`getComponentInterfaces XPureCmpWithSpred 2`] = `
"import { getComponentInterfaces } from '../../reflector/reflector';
import { XPureCmpWithSpred } from './_components';
const interfaces = [\\"XAttrs\\", \\"IClickable\\"];
"
`;

exports[`getInterfaces 1`] = `
"import { getInterfaces } from '../../reflector/reflector';
import { IProps } from './_interfaces';
const props: IProps = { value: 'foo' };
const interfaces = [\\"IProps\\", \\"IClickable\\"];
const interfacesWithT = [\\"IProps\\", \\"IClickable\\"];
"
`;

exports[`getRawInterfaces 1`] = `
"import { getRawInterfaces } from '../../reflector/reflector';
import { IProps } from './_interfaces';
const props: IProps = { value: 'foo' };
const interfaces = [{\\"name\\":\\"IProps\\",\\"entries\\":[{\\"name\\":\\"value\\",\\"type\\":\\"string\\",\\"optional\\":false},{\\"name\\":\\"type\\",\\"type\\":\\"string\\",\\"optional\\":true},{\\"name\\":\\"checked\\",\\"type\\":\\"boolean\\",\\"optional\\":true}]}, {\\"name\\":\\"IClickable\\",\\"entries\\":[{\\"name\\":\\"onClick\\",\\"type\\":\\"void\\",\\"optional\\":true}]}];
const interfacesWithT = [{\\"name\\":\\"IProps\\",\\"entries\\":[{\\"name\\":\\"value\\",\\"type\\":\\"string\\",\\"optional\\":false},{\\"name\\":\\"type\\",\\"type\\":\\"string\\",\\"optional\\":true},{\\"name\\":\\"checked\\",\\"type\\":\\"boolean\\",\\"optional\\":true}]}, {\\"name\\":\\"IClickable\\",\\"entries\\":[{\\"name\\":\\"onClick\\",\\"type\\":\\"void\\",\\"optional\\":true}]}];
"
`;
